--- a/ChicagoEmployeeSalaries/Base.lproj/Main.storyboard
+++ b/ChicagoEmployeeSalaries/Base.lproj/Main.storyboard
@@ -92,6 +92,7 @@
                         <segue destination="gv2-eY-eXI" kind="show" identifier="SearchByNameAndDepartment" id="9cY-EZ-gpW"/>
                         <segue destination="4J9-aO-p2p" kind="show" identifier="SearchBySalary" id="b4z-TN-n85"/>
                         <segue destination="PU1-5f-Ukb" kind="show" identifier="SearchByPosition" id="1BI-Rf-Rkt"/>
+                        <segue destination="FE1-rL-5We" kind="show" identifier="SearchByPositionAndDepartment" id="3ks-Nd-R0G"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
@@ -727,6 +728,9 @@
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6XK-Um-hhn">
                                                 <rect key="frame" x="0.0" y="125" width="48.5" height="30"/>
                                                 <state key="normal" title="Search"/>
+                                                <connections>
+                                                    <action selector="buttonPressed:" destination="XYZ-ZI-5vK" eventType="touchUpInside" id="TcG-8i-D5O"/>
+                                                </connections>
                                             </button>
                                         </subviews>
                                     </stackView>
@@ -789,8 +793,9 @@
                                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Text" textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="boS-ap-OSw">
                                                 <rect key="frame" x="0.0" y="36" width="163" height="30"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                                <textInputTraits key="textInputTraits" autocapitalizationType="words" autocorrectionType="no" spellCheckingType="no" returnKeyType="search"/>
+                                                <textInputTraits key="textInputTraits" autocapitalizationType="allCharacters" autocorrectionType="no" spellCheckingType="no" returnKeyType="search"/>
                                                 <connections>
+                                                    <action selector="buttonPressed:" destination="PU1-5f-Ukb" eventType="primaryActionTriggered" id="aZS-dD-oWD"/>
                                                     <action selector="textFieldDidBeginEditing:" destination="PU1-5f-Ukb" eventType="editingDidBegin" id="bQW-dc-cF1"/>
                                                     <action selector="textFieldDidEndEditing:" destination="PU1-5f-Ukb" eventType="editingDidEnd" id="sj7-WT-lxN"/>
                                                     <action selector="textFieldValueDidChange:" destination="PU1-5f-Ukb" eventType="editingChanged" id="BAR-JS-7Ig"/>
@@ -801,7 +806,6 @@
                                                 <state key="normal" title="Search"/>
                                                 <connections>
                                                     <action selector="buttonPressed:" destination="PU1-5f-Ukb" eventType="touchUpInside" id="HN8-Up-18F"/>
-                                                    <segue destination="k0N-L8-Gw9" kind="show" identifier="PositionResults" id="rm4-6x-dsU"/>
                                                 </connections>
                                             </button>
                                         </subviews>
@@ -827,17 +831,108 @@
                         <outlet property="centerView" destination="Tky-2v-e0Y" id="3Fz-wO-ia7"/>
                         <outlet property="label" destination="oCR-OY-gPM" id="H8X-9z-z4h"/>
                         <outlet property="textField" destination="boS-ap-OSw" id="qqz-zM-6VT"/>
+                        <segue destination="k0N-L8-Gw9" kind="show" identifier="PositionResults" id="OeK-bC-8vd"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="d1i-9d-mFB" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="736" y="-2488"/>
         </scene>
+        <!--Position And Department Results View Controller-->
+        <scene sceneID="FGL-Wl-pjQ">
+            <objects>
+                <viewController id="FE1-rL-5We" customClass="PositionAndDepartmentResultsViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="8N1-cp-dI7"/>
+                        <viewControllerLayoutGuide type="bottom" id="Ml8-eL-cqk"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="gfZ-4W-zRy">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="gcA-Tb-JbU">
+                                <rect key="frame" x="198" y="203" width="202.5" height="195"/>
+                                <subviews>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="6" translatesAutoresizingMaskIntoConstraints="NO" id="hw7-rH-oLz">
+                                        <rect key="frame" x="77" y="20" width="48.5" height="155"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Text" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="12" translatesAutoresizingMaskIntoConstraints="NO" id="wgk-NP-YL1">
+                                                <rect key="frame" x="0.0" y="0.0" width="48.5" height="20.5"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Text" textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="v8S-Zy-r6r">
+                                                <rect key="frame" x="0.0" y="26" width="48.5" height="30"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                <textInputTraits key="textInputTraits" autocapitalizationType="allCharacters" autocorrectionType="no" spellCheckingType="no" returnKeyType="next"/>
+                                                <connections>
+                                                    <action selector="textFieldDidBeginEditing:" destination="FE1-rL-5We" eventType="editingDidBegin" id="aAo-1j-dU3"/>
+                                                    <action selector="textFieldDidEndEditing:" destination="FE1-rL-5We" eventType="editingDidEnd" id="6Jr-5V-vff"/>
+                                                    <action selector="textFieldValueDidChange:" destination="FE1-rL-5We" eventType="editingChanged" id="pwY-aE-d0r"/>
+                                                </connections>
+                                            </textField>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Text" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="12" translatesAutoresizingMaskIntoConstraints="NO" id="n8V-fv-lbo">
+                                                <rect key="frame" x="0.0" y="62" width="48.5" height="20.5"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" horizontalCompressionResistancePriority="1" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Text" textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="lxQ-kU-CY3">
+                                                <rect key="frame" x="0.0" y="89" width="48.5" height="30"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                <textInputTraits key="textInputTraits" autocapitalizationType="allCharacters" autocorrectionType="no" spellCheckingType="no" returnKeyType="search"/>
+                                                <connections>
+                                                    <action selector="buttonPressed:" destination="FE1-rL-5We" eventType="primaryActionTriggered" id="APr-R0-XJT"/>
+                                                    <action selector="textFieldDidBeginEditing:" destination="FE1-rL-5We" eventType="editingDidBegin" id="LPl-Te-9Bc"/>
+                                                    <action selector="textFieldDidEndEditing:" destination="FE1-rL-5We" eventType="editingDidEnd" id="Olf-vZ-inf"/>
+                                                    <action selector="textFieldValueDidChange:" destination="FE1-rL-5We" eventType="editingChanged" id="TZf-DB-1zW"/>
+                                                </connections>
+                                            </textField>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="yed-4b-FPD">
+                                                <rect key="frame" x="0.0" y="125" width="48.5" height="30"/>
+                                                <state key="normal" title="Search"/>
+                                                <connections>
+                                                    <action selector="buttonPressed:" destination="FE1-rL-5We" eventType="touchUpInside" id="3cL-kb-MkF"/>
+                                                </connections>
+                                            </button>
+                                        </subviews>
+                                    </stackView>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="bottom" secondItem="hw7-rH-oLz" secondAttribute="bottom" constant="20" id="C2O-6g-UYj"/>
+                                    <constraint firstAttribute="trailing" secondItem="hw7-rH-oLz" secondAttribute="trailing" constant="77" id="VUd-ex-syH"/>
+                                    <constraint firstItem="hw7-rH-oLz" firstAttribute="leading" secondItem="gcA-Tb-JbU" secondAttribute="leading" constant="77" id="jMp-SC-kGe"/>
+                                    <constraint firstItem="hw7-rH-oLz" firstAttribute="top" secondItem="gcA-Tb-JbU" secondAttribute="top" constant="20" id="x0O-wd-5i2"/>
+                                </constraints>
+                            </view>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="gcA-Tb-JbU" firstAttribute="centerY" secondItem="gfZ-4W-zRy" secondAttribute="centerY" id="gde-Gr-Tja"/>
+                            <constraint firstItem="gcA-Tb-JbU" firstAttribute="centerX" secondItem="gfZ-4W-zRy" secondAttribute="centerX" id="sh1-vQ-wbW"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="KJE-eQ-vAn"/>
+                    <connections>
+                        <outlet property="centerView" destination="gcA-Tb-JbU" id="MIu-QQ-IFd"/>
+                        <outlet property="label" destination="wgk-NP-YL1" id="5zx-cV-rA6"/>
+                        <outlet property="labelTwo" destination="n8V-fv-lbo" id="dZu-zf-ram"/>
+                        <outlet property="textField" destination="v8S-Zy-r6r" id="44g-xO-IUz"/>
+                        <outlet property="textFieldTwo" destination="lxQ-kU-CY3" id="x9N-2t-DXt"/>
+                        <segue destination="k0N-L8-Gw9" kind="show" identifier="PositionAndDepartmentResults" id="1cO-NV-7rc"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Y8Q-4S-Pqt" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="736" y="-3174"/>
+        </scene>
     </scenes>
     <resources>
         <image name="chicago_5.png" width="996" height="1024"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="NQG-pM-bh0"/>
+        <segue reference="1cO-NV-7rc"/>
     </inferredMetricsTieBreakers>
 </document>
